Fix bleed through issue with IOS scrolling. #MBL-10846

--- a/content/css/themes/crm/base.less
+++ b/content/css/themes/crm/base.less
@@ -280,7 +280,6 @@
     top: 0px;
     bottom: 0px;
     overflow: auto;
-    -webkit-overflow-scrolling: touch;
 
     &.animate {
         -webkit-transition: top 0.3s ease;
@@ -474,7 +473,6 @@ body > .viewContainer > .dialog {
 
 body > .viewContainer > .panel {
     overflow: auto;
-    -webkit-overflow-scrolling: touch;
 }
 
 body.transition > .viewContainer > .panel,
